# markdown-to-word

./: README.md  config-complete.json  markdown_to_word.py  pyproject.toml
